<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="start">Тысячи курсов\nв одном месте</string>
    <string name="continueText">Продолжить</string>
    <string name="register">Регистрация</string>
    <string name="email">Email</string>
    <string name="emailExample">example@gmail.com</string>
    <string name="password">Пароль</string>
    <string name="inputPassword">Введите пароль</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="repeatInputPassword">Введите пароль ещё раз</string>
    <string name="login">Вход</string>
</resources>