<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/email"
style="@style/SubTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/smallViewHeight"
        android:layout_marginTop="10dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/grayBackground"
        android:hint="@string/emailExample"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        style="@style/SubTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail">

    </TextView>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/smallViewHeight"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/grayBackground"
        android:hint="@string/inputPassword"
        android:inputType="textPassword"

        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/smallViewHeight"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <LinearLayout
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin">

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Забыли пароль?"
            android:textColor="@color/green" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divivder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4D555E"

        app:layout_constraintTop_toBottomOf="@id/tvHaveAccount" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/divivder">


        <ImageButton
            android:id="@+id/btnVk"
            android:layout_width="0dp"
            android:layout_height="@dimen/smallViewHeight"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:backgroundTint="@color/blue"
            android:scaleType="centerInside"
            android:src="@drawable/vk" />

        <ImageButton
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="@dimen/smallViewHeight"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:backgroundTint="@color/orange"
            android:scaleType="centerInside"
            android:src="@drawable/ok" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>